# InvoiceGenius

./: .gitignore  LICENSE  README.md  pyproject.toml
app/core/: settings.py
app/db/: utils.py
app/models/: __init__.py  ai_invoice_model.py  client_contact_model.py  invoice_contact_model.py  invoice_model.py  responses.py
app/routes/: router.py
app/routes/ai_invoice/: __init__.py  ai_invoice_service.py  ai_invoice_view.py
app/routes/invoice/: invoice_dao.py  invoice_view.py
app/routes/super_admin/: super_admin_views.py
envs/: dev.example.env
