[tool.poetry]
name = "fastapi-invoice-app"
version = "0.1.0"
description = "Invoice Generator API"
authors = ["RashminDungrani <rashmin8248@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "^0.109.0"
sqlmodel = "^0.0.14"
aiomysql = "^0.2.0"
uvicorn = "^0.27.0"
pytest = "^8.0.0"
httpx = "^0.26.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
yarl = "^1.9.4"
alembic = "^1.13.1"
pydantic = {extras = ["dotenv"], version = "^2.6.1"}
ujson = "^5.9.0"
typing-extensions = "^4.9.0"
pydantic-settings = "^2.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119